add getAllFolders, getFolder APIs
