# engagedigital/model_folder.go
@@ -1,0 +1,26 @@
+/*
+ * Engage Digital API
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * API version: 1.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package engagedigital
+
+import (
+	"time"
+)
+
+type Folder struct {
+	CreatedAt          time.Time              `json:"created_at,omitempty"`
+	Id                 string                 `json:"id,omitempty"`
+	Label              string                 `json:"label,omitempty"`
+	ParentId           string                 `json:"parent_id,omitempty"`
+	Position           int32                  `json:"position,omitempty"`
+	Query              string                 `json:"query,omitempty"`
+	RenderThreadsCount bool                   `json:"render_threads_count,omitempty"`
+	RoleRestriction    map[string]interface{} `json:"role_restriction,omitempty"`
+	UpdatedAt          time.Time              `json:"updated_at,omitempty"`
+}
