# examples/get_simple/main.go
@@ -80,6 +80,24 @@ func main() {
 			}
 			fmtutil.PrintJSON(info)
 		}
+	case "folder":
+		if len(opts.Id) > 0 {
+			info, resp, err := client.FoldersApi.GetFolder(context.Background(), opts.Id)
+			if err != nil {
+				log.Fatal(err)
+			} else if resp.StatusCode != 200 {
+				log.Fatal(resp.StatusCode)
+			}
+			fmtutil.PrintJSON(info)
+		} else {
+			info, resp, err := client.FoldersApi.GetAllFolders(context.Background(), nil)
+			if err != nil {
+				log.Fatal(err)
+			} else if resp.StatusCode != 200 {
+				log.Fatal(resp.StatusCode)
+			}
+			fmtutil.PrintJSON(info)
+		}
 	}
 
 	fmt.Println("DONE")
